--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-10 07:42 | 25 ℃ | 95 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-10 07:57 | 25 ℃ | 95 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-10 08:12 | 26 ℃ | 95 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-10 08:27 | 28 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-10 09:57 | 30 ℃ | 95 ％|指数  33  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-10 10:12 | 30 ℃ | 95 ％|指数  33  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-10 10:27 | 31 ℃ | 95 ％|指数  33  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-10 10:42 | 31 ℃ | 95 ％|指数  34  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
