--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-10 12:42 | 33 ℃ | 88 ％|指数  35  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-10 12:57 | 33 ℃ | 89 ％|指数  35  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-10 13:12 | 34 ℃ | 89 ％|指数  36  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-10 13:27 | 34 ℃ | 88 ％|指数  36  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-10 14:57 | 29 ℃ | 94 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-10 15:12 | 29 ℃ | 95 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-10 15:27 | 28 ℃ | 95 ％|指数  31  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-10 15:42 | 28 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
