--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-12 07:57 | 28 ℃ | 95 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-12 08:12 | 29 ℃ | 95 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-12 08:27 | 29 ℃ | 95 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-12 08:42 | 29 ℃ | 95 ％|指数  32  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-12 10:12 | 32 ℃ | 95 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-12 10:27 | 32 ℃ | 95 ％|指数  35  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-12 10:42 | 32 ℃ | 95 ％|指数  35  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-12 10:57 | 33 ℃ | 94 ％|指数  36  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
