--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-13 14:13 | 35 ℃ | 78 ％|指数  35  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-13 14:28 | 34 ℃ | 79 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-13 14:43 | 35 ℃ | 78 ％|指数  35  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-13 14:58 | 34 ℃ | 78 ％|指数  34  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-13 16:28 | 34 ℃ | 78 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-13 16:43 | 34 ℃ | 79 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-13 16:58 | 34 ℃ | 73 ％|指数  33  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-13 17:13 | 30 ℃ | 77 ％|指数  30  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
