--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-16 04:13 | 27 ℃ | 85 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-16 04:28 | 27 ℃ | 85 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-16 04:43 | 27 ℃ | 85 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-16 04:58 | 27 ℃ | 85 ％|指数  28  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-16 06:28 | 28 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-16 06:43 | 29 ℃ | 95 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-16 06:58 | 29 ℃ | 95 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-16 07:13 | 30 ℃ | 95 ％|指数  33  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
