--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-16 18:28 | 32 ℃ | 83 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-16 18:43 | 32 ℃ | 82 ％|指数  33  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-16 18:58 | 32 ℃ | 83 ％|指数  33  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-16 19:13 | 32 ℃ | 83 ％|指数  33  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-16 20:43 | 30 ℃ | 84 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-16 20:58 | 30 ℃ | 84 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-16 21:13 | 30 ℃ | 84 ％|指数  30  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-16 21:28 | 29 ℃ | 85 ％|指数  30  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
