--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-18 07:13 | 28 ℃ | 83 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-18 07:28 | 28 ℃ | 84 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-18 07:43 | 29 ℃ | 94 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-18 07:58 | 30 ℃ | 93 ％|指数  32  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-18 09:28 | 34 ℃ | 84 ％|指数  35  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-18 09:43 | 34 ℃ | 82 ％|指数  35  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-18 09:58 | 34 ℃ | 81 ％|指数  36  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-18 10:13 | 35 ℃ | 79 ％|指数  35  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
