--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-19 06:59 | 28 ℃ | 83 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-19 07:14 | 28 ℃ | 84 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-19 07:29 | 28 ℃ | 84 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-19 07:44 | 29 ℃ | 84 ％|指数  30  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-19 09:14 | 33 ℃ | 87 ％|指数  35  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-19 09:29 | 33 ℃ | 86 ％|指数  35  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-19 09:44 | 34 ℃ | 85 ％|指数  35  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-19 09:59 | 34 ℃ | 84 ％|指数  35  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
