--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-21 06:29 | 27 ℃ | 88 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-21 06:44 | 28 ℃ | 88 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-21 06:59 | 28 ℃ | 88 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-21 07:14 | 28 ℃ | 88 ％|指数  30  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-21 08:44 | 30 ℃ | 88 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-21 08:59 | 30 ℃ | 87 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-21 09:14 | 30 ℃ | 86 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-21 09:29 | 31 ℃ | 87 ％|指数  33  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
