--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-21 10:29 | 33 ℃ | 85 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-21 10:44 | 33 ℃ | 85 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-21 10:59 | 34 ℃ | 85 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-21 11:14 | 34 ℃ | 84 ％|指数  35  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-21 12:44 | 36 ℃ | 81 ％|指数  37  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-21 12:59 | 35 ℃ | 82 ％|指数  36  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-21 13:14 | 36 ℃ | 83 ％|指数  37  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-23 07:14 | 28 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
