--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-24 20:29 | 29 ℃ | 92 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-24 20:44 | 29 ℃ | 92 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-24 20:59 | 29 ℃ | 91 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-24 21:14 | 29 ℃ | 92 ％|指数  31  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-24 22:59 | 28 ℃ | 91 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-24 23:14 | 28 ℃ | 92 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-24 23:29 | 28 ℃ | 92 ％|指数  30  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-24 23:44 | 28 ℃ | 92 ％|指数  30  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
