--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-26 23:44 | 26 ℃ | 95 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-26 23:59 | 26 ℃ | 95 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-27 00:14 | 26 ℃ | 95 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-27 00:29 | 26 ℃ | 95 ％|指数  28  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-27 01:59 | 25 ℃ | 95 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-27 02:14 | 25 ℃ | 95 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-27 02:29 | 24 ℃ | 95 ％|指数  27  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-06-27 02:44 | 24 ℃ | 95 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
